@@ -14,6 +14,8 @@ Changelog for MyUSB:
 		* Added DriverStubs directory to house board level driver templates, to make MyUSB compatible custom board
 		  driver creation easier
 		* Extended MassStorage demo to support multiple LUNs
+		* Fixed incorrect device address mask, preventing the device from enumerating with addresses larger than 63
+		* Fixed incorrect data direction mask in the GetStatus standard request, preventing it from being handled
 
 	Version 1.5.2 - Released 31st July, 2008:
 	--------------------------------------------
